# mingw-w64

experimental/: ChangeLog  ChangeLog.2010  README  addedinintegrattest  update_crt.pl
experimental/DFP_crt/: Makefile.am  aclocal.m4  config.h.in  configure  configure.ac  experimental.txt
experimental/DFP_crt/stdio/: mingw_pformat.c  mingw_vfscanf.c
experimental/DFP_headers/: Makefile.in
experimental/DFP_headers/crt/: math.h
experimental/backtrace/: backtrace.c  execinfo.h
experimental/buildbot/: buildbot  buildbot.tac  buildsteps.py  download-src.py  forcebuilder.py  master.cfg  root-init.sh  selinuxrsync.te  trysubmitter.py  upload.py  wrapped-exec.sh
experimental/buildbot/factories/: mingw64factory.py  nightlysrcpackage.py  (+1 more)
experimental/buildsystem/: Makefile.am  Makefile.mklibs.am  configure.ac  makebuildroot-native.mk  makebuildroot-test.mk  makebuildroot.mk  makebuildroot.sh
experimental/buildsystem/obsolete/: README
experimental/ddk_test/: README.ddk
experimental/dfp_math/: copysignd.def  copysignd128.c  copysignd32.c  copysignd64.c  dfp_internal.h  fabsd.def  fabsd128.c  fabsd32.c  fabsd64.c  infd.c  isinfd.def.h  isinfd128.c  isinfd64.c  isnand.def  isnand128.c  isnand32.c  isnand64.c  llrintd128.c  llrintd32.c  llrintd64.c  llroundd128.c  llroundd32.c  llroundd64.c  lrintd.def  lrintd128.c  lrintd32.c  lrintd64.c  lroundd.def  lroundd128.c  lroundd32.c  lroundd64.c  math.h  nand.c
experimental/doug/new_complex/: Makefile.am  Makefile.in  README  configure  configure.ac
experimental/doug/new_complex/complex/: cabsf.c  cabsl.c  cacos.c  cacos.def.h  cacosh.def.h  carg.c  cargf.c  cargl.c  casin.c  casin.def.h  casinl.c  catan.c  catan.def.h  ccos.c  ccosf.c  ccosh.def.h  cexp.def.h  cexpf.c  cimag.def.h  cimagf.c  conj.c  cpow.c  cprojf.c  cprojl.c  csin.def.h  csinf.c  csinl.c  csqrt.def.h  csqrtl.c  ctan.c  ctan.def.h  ctanh.def.h  ctanl.c
experimental/doug/new_complex/src/: cabs.c  cabs.def.h  cacosf.c  cacosl.c  carg.c  casin.def.h  casinf.c  catanf.c  catanl.c  ccos.c  ccos.def.h  ccosf.c  ccosl.c  cexp.c  cexp.def.h  cexpl.c  cimag.c  cimagl.c  clog.c  clog.def.h  clogf.c  clogl.c  complex.def_ld.h  complex_internal.h  conj.c  conjf.c  conjl.c  cpow.c  cpow.def.h  cpowf.c  cpowl.c  cproj.c  cproj.def.h  creal.c  creal.def.h  crealf.c  creall.c  csin.c  csinf.c  csinl.c  (+8 more)
experimental/doug/new_complex/testcases/complex/: cabs.c  cacos.c  cacosh.c  carg.c  casin.c  casinh.c  catan.c  catanh.c  ccos.c  ccosh.c  cexp.c  cimag.c  clog.c  complex_test.h  complex_tests.am  conj.c  cproj.c  creal.c  csin.c  csinh.c  csqrt.c  ctan.c  ctanh.c  main.c
experimental/doug/new_complex/tests/: cabs.c  cabsf.c  cabsl.c  cacos.c  cacosf.c  cacosh.c  cacoshf.c  cacoshl.c  cacosl.c  carg.c  cargf.c  cargl.c  casin.c  casinf.c  casinh.c  casinhf.c  casinhl.c  casinl.c  catan.c  catanf.c  catanh.c  catanhf.c  catanhl.c  catanl.c  ccos.c  ccosf.c  ccosh.c  ccoshf.c  ccoshl.c  ccosl.c  cexp.c  cexpf.c  cexpl.c  clog.c  clogf.c  clogl.c  compare_flt.c  complex_test.h  complex_tests.am  conj.c  (+20 more)
experimental/getrusage/: getrusage.c  resource.h
experimental/headers_additions_test/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
experimental/headers_additions_test/crt/sdks/: _mingw_directx.h.in
experimental/headers_additions_test/pkgconfig/: mingw-w64-headers-ddk.pc.in  mingw-w64-headers-ndk.pc.in
experimental/include_ce/: Activesync.h  CEDDK.h  Cfgmgrapi.h  Devmgmt.h  Regext.h  Tlhelp32.h  appnav.h  aygshell.h  bthutil.h  connmgr.h  coredll_exports_WM5_R2.txt  coredll_exports_WM6.txt  fdrm.h  phone.h  shlobj.h  sms.h  urlmon.h  voicectl.h  wap.h
experimental/libw64crt/: ChangeLog
experimental/new_complex/: Makefile.am  Makefile.in  ccos.c  complex.h  configure  cpow.c  csin.c  csqrt.c  doc.txt
experimental/tools/genidl/: Makefile.am  Makefile.in  configure  configure.ac  genidl.c  genidl_cfg.h  genidl_config.c  genidl_dumpidl.c  genidl_readpe.c  genidl_readpe.h  genidl_typeinfo.c  genidl_typeinfo.h  genidl_typinfo.c  genidl_typinfo.h
experimental/tools/genidl/src/: genidl_cfg.h  genidl_config.c  genidl_dumpidl.c  genidl_readpe.c  genidl_readpe.h  genidl_typeinfo.c  genidl_typeinfo.h  genidl_typinfo.c  genidl_typinfo.h
experimental/vista_7_headers/: Ifdef.h  aclapi.h  adhoc.h  atacct.h  authz.h  avrt.h  azroles.h  bcrypt.h  bluetoothapis.h  bthsdpdef.h  cardmod.h  casetup.h  certenroll.h  clfs.h  clfsmgmt.h  clfsmgmtw32.h  clfsw32.h  clusapi.h  codecapi.h  credssp.h  cscapi.h  cscobj.h  d2d1.h  d2d1helper.h  davclnt.h  dbghelp.h  dhcpsapi.h  dhcpv6csdk.h  dssec.h  dxva2api.h  dxvahd.h  eapauthenticatoractiondefine.h  eapauthenticatortypes.h  eaphosterror.h  eaphostpeerconfigapis.h  eaphostpeertypes.h  eapmethodauthenticatorapis.h  eapmethodpeerapis.h  eapmethodtypes.h  eappapis.h  (+151 more)
experimental/vista_7_idl/: README.txt  accessibilitycpl.idl  activeds.idl  amcompat.idl  apds.idl  appidpolicyengineapi.idl  appwiz.idl  atitmm64.idl  atl.idl  atl100.idl  auditpolicygpinterop.idl  azroles.idl  bcdsrv.idl  bdeuisrv.idl  biocpl.idl  brcpl.idl  catsrvut.idl  cdosys.idl  certcli.idl  certenc.idl  certenroll.idl  certmgr.idl  cic.idl  clbcatq.idl  cngprovider.idl  compatui.idl  comrepl.idl  comsnap.idl  comsvcs.idl  connect.idl  correngine.idl  cryptext.idl  cscript.idl  cttunesvr.idl  deployjava1.idl  devicepairinghandler.idl  devicepairingproxy.idl  dfsshlex.idl  diagcpl.idl  dmocx.idl  (+236 more)
experimental/wine/: wine-import.sh
experimental/wine/widl/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  wine-import.sh
experimental/wine/widl/include/: config.h.in
experimental/wine/widl/include/wine/: port.h
experimental/wine/widl/src/: header.c  parser.tab.c  parser.tab.h  parser.yy.c  typelib.c  widl.c  write_msft.c
experimental/wine/widl/src/port/: port.c
experimental/wine/widl/src/wpp/: ppl.yy.c  ppy.tab.c
experimental/winpthreads/: Makefile.am  Makefile.in  configure  configure.ac
experimental/winsock_work/: ChangeLog  _ip_types.h  _socket_types.h  in6addr.h  inaddr.h  mswsock.h  time.h  winsock.h  winsock2.h  ws2tcpip.h
(+3971 files in other folders)
